//
// Protocol buffers definition for Silo server
//
syntax = "proto3";
package pt.tecnico.sauron.silo.grpc;
import "google/protobuf/timestamp.proto";
import "google/type/latlng.proto";

message VectorClock {
    repeated int32 updates = 1;
}

message Observable {
    string type = 1;
    string identifier = 2;
}

message Camera {
    string name = 1;
    google.type.LatLng coords = 2;
}

message Observation {
    Observable observated = 1;
    Camera camera = 2;
    google.protobuf.Timestamp time = 3;
}

message CamJoinRequest {
    Camera camera = 1;
}

message CamJoinResponse {
    
}

message CamInfoRequest {
    string name = 1;
}

message CamInfoResponse {
    Camera camera = 2;
}

message ReportRequest {
    string cameraName = 1;
    repeated Observation observations = 2;
}

message ReportResponse {
}

message TrackRequest {
    Observable identity = 1;
}

message TrackResponse {
    Observation observation = 1;
}

message TrackMatchRequest {
    Observable identity = 1;
}

message TrackMatchResponse {
    repeated Observation observations = 1;
}

message TraceRequest {
    Observable identity = 1;
}

message TraceResponse {
    repeated Observation observations = 1;
}

message ControlPingRequest {
    string inputText = 1;
}

message ControlPingResponse {
    string status = 1;
}

message ControlClearRequest {
    //empty
}

message ControlClearResponse {
}

message ControlInitRequest {
    repeated Observation observation = 1;
}

message ControlInitResponse {
    
}

service Sauron {
    rpc CamJoin(CamJoinRequest) returns (CamJoinResponse);
    rpc CamInfo(CamInfoRequest) returns (CamInfoResponse);
    rpc Report(ReportRequest) returns (ReportResponse);
    rpc Track(TrackRequest) returns (TrackResponse);
    rpc TrackMatch(TrackMatchRequest) returns (TrackMatchResponse);
    rpc Trace(TraceRequest) returns (TraceResponse);
    rpc ControlClear(ControlClearRequest) returns (ControlClearResponse);
    rpc ControlPing(ControlPingRequest) returns (ControlPingResponse);
    rpc ControlInit(ControlInitRequest) returns (ControlInitResponse);
}